create test module
reorganizar utilidades para probar las medidas

--- a/apode.ipynb
+++ b/apode.ipynb
@@ -73,7 +73,7 @@
     "import pandas as pd\n",
     "\n",
     "from apode import IneqMeasure # clase\n",
-    "from apode import distribution_examples,default_rng,joinpar # test"
+    "from apode import distribution_examples,default_rng,test_measures # test  "
    ]
   },
   {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
        "max       175.7"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "['weight', 'x']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "((10, 2), 2, 20)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "0.656"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        "0.675"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -852,21 +852,15 @@
        "14  chakravarty     50  0.5         0.199721"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Evaluar un listado de métodos\n",
-    "mlist_p = ['fgt0','fgt1','fgt2',['fgt',1.5],'sen','sst','watts',['cuh',0],['cuh',0.5],'takayama','kakwani','thon',['bd',2],'hagenaars',['chakravarty',0.5 ]]\n",
-    "mlist_p2 = [joinpar(x,pline) for x in mlist_p ]\n",
-    "table = []\n",
-    "for elem in mlist_p2:   \n",
-    "    table.append(dr2.poverty(elem[0],*elem[1:]))\n",
-    "df_outp =  pd.DataFrame(mlist_p2,columns = ['method','pline','par'])  \n",
-    "df_outp['poverty_measure'] = table\n",
-    "df_outp"
+    "dfl_p = test_measures(dr2,'poverty')\n",
+    "dfl_p"
    ]
   },
   {
@@ -878,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +921,7 @@
        "0.36243669262961725"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +943,7 @@
        "3.591437752558451"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1119,22 +1113,15 @@
        "16    atkinson  2.00 -18603.552410"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Evaluar una lista de métodos\n",
-    "list_i = ['rr','dmr','cv','dslog','gini','merhan','piesch','bonferroni',['kolm',0.5],['ratio',0.05],['ratio',0.2], \\\n",
-    "          ['entropy',0],['entropy',1],['entropy',2],['atkinson',0.5],['atkinson',1],['atkinson',2]]\n",
-    "list_i = [[elem] if not isinstance(elem,list) else elem for elem in list_i]\n",
-    "table = []\n",
-    "for elem in list_i:   \n",
-    "    table.append(dr2.ineq(*elem))\n",
-    "dz_i =  pd.DataFrame(list_i,columns = ['method','par'])  \n",
-    "dz_i['ineq_measure'] = table\n",
-    "dz_i"
+    "# Evaluar un listado de métodos\n",
+    "dfl_i = test_measures(dr2,'ineq')\n",
+    "dfl_i"
    ]
   },
   {
@@ -1146,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1245,7 @@
        "27.52092818253392"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1267,7 @@
        "45.91496318162924"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1394,21 +1381,15 @@
        "8   isoelastic  inf         0.308786"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Lista de indicadores\n",
-    "list_w = ['utilitarian','rawlsian','sen','theill','theilt',['isoelastic',0],['isoelastic',1],['isoelastic',2],['isoelastic',np.Inf]]\n",
-    "list_w = [[elem] if not isinstance(elem,list) else elem for elem in list_w]\n",
-    "table = []\n",
-    "for elem in list_w:   \n",
-    "    table.append(dr2.welfare(*elem))\n",
-    "dz_w =  pd.DataFrame(list_w,columns = ['method','par'])  \n",
-    "dz_w['welfare_measure'] = table\n",
-    "dz_w     "
+    "# Evaluar un listado de métodos\n",
+    "dfl_w = test_measures(dr2,'welfare')\n",
+    "dfl_w"
    ]
   },
   {
@@ -1422,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1412,7 @@
        "0.031461857737321096"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1493,20 +1474,15 @@
        "1    wlf             -0.120901"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# lista de indicadores\n",
-    "list_pz = ['er','wlf']\n",
-    "table = []\n",
-    "for elem in list_pz:   \n",
-    "    table.append(dr2.polar(elem))\n",
-    "dz_pz =  pd.DataFrame(list_pz,columns = ['method'])  \n",
-    "dz_pz['polarization_measure'] = table\n",
-    "dz_pz"
+    "# Evaluar un listado de métodos\n",
+    "dfl_pz = test_measures(dr2,'polar')\n",
+    "dfl_pz"
    ]
   },
   {
@@ -1520,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1505,7 @@
        "0.0014448204412599976"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1615,21 +1591,15 @@
        "4          cr  5.0               0.017772"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# lista de indicadores\n",
-    "list_c = ['hhi','hhin','rosenbluth',['cr',1],['cr',5]]\n",
-    "list_c = [[elem] if not isinstance(elem,list) else elem for elem in list_c]\n",
-    "table = []\n",
-    "for elem in list_c:   \n",
-    "    table.append(dr2.conc(*elem))\n",
-    "dz_c =  pd.DataFrame(list_c,columns = ['method','par'])  \n",
-    "dz_c['concentration_measure'] = table\n",
-    "dz_c     "
+    "# Evaluar un listado de métodos\n",
+    "dfl_c = test_measures(dr2,'conc')\n",
+    "dfl_c"
    ]
   },
   {
@@ -1645,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1768,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1747,7 @@
        "0.5818181818181818"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1810,7 @@
        "20    0.25000        24"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
