--- a/apode.ipynb
+++ b/apode.ipynb
@@ -55,9 +55,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (poverty.py, line 94)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[0;32m\"C:\\Programas\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3331\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[0;32m\"<ipython-input-3-b79c181c5cb6>\"\u001b[0m, line \u001b[0;32m7\u001b[0m, in \u001b[0;35m<module>\u001b[0m\n    from apode import ApodeData # clase\n",
+      "  File \u001b[0;32m\"D:\\GitHub\\apode\\apode\\__init__.py\"\u001b[0m, line \u001b[0;32m25\u001b[0m, in \u001b[0;35m<module>\u001b[0m\n    from .basic import ApodeData\n",
+      "\u001b[1;36m  File \u001b[1;32m\"D:\\GitHub\\apode\\apode\\basic.py\"\u001b[1;36m, line \u001b[1;32m26\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    from .poverty import PovertyMeasures\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m\"D:\\GitHub\\apode\\apode\\poverty.py\"\u001b[1;36m, line \u001b[1;32m94\u001b[0m\n\u001b[1;33m    \"\"\"\u001b[0m\n\u001b[1;37m                 \n^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
