--- a/apode/Drafts/apode.ipynb
+++ b/apode/Drafts/apode.ipynb
@@ -55,32 +55,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (poverty.py, line 94)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[0;32m\"C:\\Programas\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3331\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \u001b[0;32m\"<ipython-input-3-b79c181c5cb6>\"\u001b[0m, line \u001b[0;32m7\u001b[0m, in \u001b[0;35m<module>\u001b[0m\n    from apode import ApodeData # clase\n",
-      "  File \u001b[0;32m\"D:\\GitHub\\apode\\apode\\__init__.py\"\u001b[0m, line \u001b[0;32m25\u001b[0m, in \u001b[0;35m<module>\u001b[0m\n    from .basic import ApodeData\n",
-      "\u001b[1;36m  File \u001b[1;32m\"D:\\GitHub\\apode\\apode\\basic.py\"\u001b[1;36m, line \u001b[1;32m26\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    from .poverty import PovertyMeasures\u001b[0m\n",
-      "\u001b[1;36m  File \u001b[1;32m\"D:\\GitHub\\apode\\apode\\poverty.py\"\u001b[1;36m, line \u001b[1;32m94\u001b[0m\n\u001b[1;33m    \"\"\"\u001b[0m\n\u001b[1;37m                 \n^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"D:/GitHub/apode/\")  # ver\n",
     "\n",
-    "from apode import ApodeData # clase\n",
-    "from apode.distributions import distribution_examples,default_rng # test  "
+    "from apode import ApodeData\n",
+    "from apode.distributions import distribution_examples #,default_rng # test  "
    ]
   },
   {
@@ -94,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +109,7 @@
        "9   9, varx='x', poverty=PovertyMeasures(idf=...), inequality=InequalityMeasures(idf=...), polarization=PolarizationMeasures(idf=...), concentration=ConcentrationMeasures(idf=...), welfare=WelfareMeasures(idf=...))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +164,7 @@
     "# Generar datos\n",
     "n = 1000 # observaciones\n",
     "j_d = 6  # elegir distribción\n",
-    "rg = default_rng(12345)\n",
+    "rg = np.random.default_rng(12345)\n",
     "listd = ['uniform','lognormal','exponential','pareto','chisquare','gamma','weibull']\n",
     "fdistr = listd[j_d]\n",
     "df2 = distribution_examples(rg,fdistr,n)\n",
@@ -208,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +213,7 @@
        "0.656"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -288,13 +284,13 @@
        "      <th>4</th>\n",
        "      <td>sen</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.436985</td>\n",
+       "      <td>0.437672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>sst</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.279283</td>\n",
+       "      <td>0.279693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -366,8 +362,8 @@
        "1           gap    NaN  0.312483\n",
        "2      severity    NaN  0.192512\n",
        "3           fgt    1.5  0.192512\n",
-       "4           sen    NaN  0.436985\n",
-       "5           sst    NaN  0.279283\n",
+       "4           sen    NaN  0.437672\n",
+       "5           sst    NaN  0.279693\n",
        "6         watts    NaN  0.549612\n",
        "7           cuh    0.0  0.426800\n",
        "8           cuh    0.5  0.359553\n",
@@ -380,7 +376,7 @@
        "15  chakravarty    0.5  0.199721"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -463,16 +459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.36243269262961664"
+       "0.3644326926296162"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +539,7 @@
        "      <th>4</th>\n",
        "      <td>gini</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.362433</td>\n",
+       "      <td>0.364433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -627,7 +623,7 @@
        "1          rad    NaN   0.264170\n",
        "2           cv    NaN   0.666949\n",
        "3        sdlog    NaN   0.887906\n",
-       "4         gini    NaN   0.362433\n",
+       "4         gini    NaN   0.364433\n",
        "5       merhan    NaN   0.509579\n",
        "6       piesch    NaN   0.288869\n",
        "7   bonferroni    NaN   0.507513\n",
@@ -642,7 +638,7 @@
        "16    atkinson   2.00   0.568995"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -790,16 +786,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "43.91702621738515"
+       "43.83069516538674"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +854,7 @@
        "      <th>2</th>\n",
        "      <td>sen</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>43.917026</td>\n",
+       "      <td>43.830695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -904,7 +900,7 @@
        "        method  alpha    measure\n",
        "0  utilitarian    NaN  43.165526\n",
        "1     rawlsian    NaN   0.308786\n",
-       "2          sen    NaN  43.917026\n",
+       "2          sen    NaN  43.830695\n",
        "3       theill    NaN  32.835971\n",
        "4       theilt    NaN  34.769813\n",
        "5   isoelastic    0.0  43.165526\n",
@@ -913,7 +909,7 @@
        "8   isoelastic    inf   0.308786"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +957,7 @@
        "0.03146185773732036"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1010,7 @@
        "      <th>1</th>\n",
        "      <td>wolfson</td>\n",
        "      <td>None</td>\n",
-       "      <td>-0.120901</td>\n",
+       "      <td>0.351678</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1023,10 +1019,10 @@
       "text/plain": [
        "    method alpha   measure\n",
        "0      ray  None  0.031462\n",
-       "1  wolfson  None -0.120901"
+       "1  wolfson  None  0.351678"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1062,7 @@
        "0.00044526570696696563"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1121,7 @@
        "      <th>2</th>\n",
        "      <td>rosenbluth</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.001568</td>\n",
+       "      <td>0.001573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1147,12 +1143,12 @@
        "                method alpha   measure\n",
        "0           herfindahl  None  0.000445\n",
        "1           herfindahl  True  0.000445\n",
-       "2           rosenbluth  None  0.001568\n",
+       "2           rosenbluth  None  0.001573\n",
        "3  concentration_ratio     1  0.004162\n",
        "4  concentration_ratio     5  0.017772"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1194,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1298,7 @@
        "9   7  10  10"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1322,7 @@
        "0.5"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1413,7 @@
        "20   0.250000         4"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1435,7 @@
        "0.5"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
