--- a/apode/Drafts/test_R/test_R.ipynb
+++ b/apode/Drafts/test_R/test_R.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +67,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test en R"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +219,7 @@
        "5   0.195726    3.968104  0.625661    0.015464  0.478014  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,6 +448,328 @@
     "            g = dr.polarization(method)\n",
     "        else:\n",
     "            g = dr.polarization(method,alpha=alpha)\n",
+    "        print([method,alpha,valR[i-1], g, isclose(valR[i-1],g)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test en Stata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Los metodos dan en general muy parecidos pero no igual\n",
+    "# Pueden ser variantes validas, o estar mal alguno\n",
+    "# pline=0  implica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 100\n",
+    "i = 1\n",
+    "df = pd.DataFrame({'y1':make_data(n,1),'y2':make_data(n,2),'y3':make_data(n,3),\n",
+    "                  'y4':make_data(n,4),'y5':make_data(n,5),'y6':make_data(n,6)})\n",
+    "df.to_csv(\"income.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>headcount</th>\n",
+       "      <th>gap</th>\n",
+       "      <th>watts</th>\n",
+       "      <th>fgt2</th>\n",
+       "      <th>fgt15</th>\n",
+       "      <th>cuh01</th>\n",
+       "      <th>cuh05</th>\n",
+       "      <th>sen</th>\n",
+       "      <th>thon</th>\n",
+       "      <th>takayama</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25</td>\n",
+       "      <td>12.128713</td>\n",
+       "      <td>22.717049</td>\n",
+       "      <td>7.923243</td>\n",
+       "      <td>9.604832</td>\n",
+       "      <td>20.975924</td>\n",
+       "      <td>15.916482</td>\n",
+       "      <td>16.089109</td>\n",
+       "      <td>22.154691</td>\n",
+       "      <td>11.523944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>23.308174</td>\n",
+       "      <td>66.009064</td>\n",
+       "      <td>18.545721</td>\n",
+       "      <td>20.535610</td>\n",
+       "      <td>56.229225</td>\n",
+       "      <td>34.716400</td>\n",
+       "      <td>28.907077</td>\n",
+       "      <td>40.304134</td>\n",
+       "      <td>22.382983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22</td>\n",
+       "      <td>10.961053</td>\n",
+       "      <td>21.793659</td>\n",
+       "      <td>7.280053</td>\n",
+       "      <td>8.746409</td>\n",
+       "      <td>19.864923</td>\n",
+       "      <td>14.608008</td>\n",
+       "      <td>14.450521</td>\n",
+       "      <td>20.220657</td>\n",
+       "      <td>10.503494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>34</td>\n",
+       "      <td>14.213349</td>\n",
+       "      <td>20.935888</td>\n",
+       "      <td>7.512673</td>\n",
+       "      <td>10.156595</td>\n",
+       "      <td>20.054390</td>\n",
+       "      <td>17.052786</td>\n",
+       "      <td>18.300571</td>\n",
+       "      <td>24.917643</td>\n",
+       "      <td>12.602591</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   headcount        gap      watts       fgt2      fgt15      cuh01  \\\n",
+       "0          0   0.000000   0.000000   0.000000   0.000000   0.000000   \n",
+       "1         25  12.128713  22.717049   7.923243   9.604832  20.975924   \n",
+       "2         35  23.308174  66.009064  18.545721  20.535610  56.229225   \n",
+       "3          0   0.000000   0.000000   0.000000   0.000000   0.000000   \n",
+       "4         22  10.961053  21.793659   7.280053   8.746409  19.864923   \n",
+       "5         34  14.213349  20.935888   7.512673  10.156595  20.054390   \n",
+       "\n",
+       "       cuh05        sen       thon   takayama  \n",
+       "0   0.000000   0.000000   0.000000   0.000000  \n",
+       "1  15.916482  16.089109  22.154691  11.523944  \n",
+       "2  34.716400  28.907077  40.304134  22.382983  \n",
+       "3   0.000000  -1.000000  -1.000000  -1.000000  \n",
+       "4  14.608008  14.450521  20.220657  10.503494  \n",
+       "5  17.052786  18.300571  24.917643  12.602591  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# leer datos de stata\n",
+    "# se puso -1 en el cvs cuando no había un número\n",
+    "fname = \"poverty_stata.csv\" \n",
+    "path = 'D:\\\\GitHub\\\\apode\\\\Drafts\\\\test_R\\\\'\n",
+    "dfR = pd.read_csv(fname) \n",
+    "nf = dfR.shape[0]\n",
+    "n = 100 # ver en R\n",
+    "dfR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['headcount', None, 0.0, 0.0, True]\n",
+      "['headcount', None, 0.25, 0.25, True]\n",
+      "['headcount', None, 0.35, 0.35, True]\n",
+      "['headcount', None, 0.0, 0.0, True]\n",
+      "['headcount', None, 0.22, 0.22, True]\n",
+      "['headcount', None, 0.34, 0.34, True]\n",
+      "['gap', None, 0.0, 0.0, True]\n",
+      "['gap', None, 0.1212871265411377, 0.12128712871287128, False]\n",
+      "['gap', None, 0.23308174133300782, 0.23308174867673004, False]\n",
+      "['gap', None, 0.0, 0.0, True]\n",
+      "['gap', None, 0.10961052894592291, 0.10961053726796396, False]\n",
+      "['gap', None, 0.1421334934234619, 0.14213348850158591, False]\n",
+      "['watts', None, 0.0, 0.0, True]\n",
+      "['watts', None, 0.2271704864501953, 0.227170486700537, False]\n",
+      "['watts', None, 0.6600906372070314, 0.6600906188073208, False]\n",
+      "['watts', None, 0.0, 0.0, True]\n",
+      "['watts', None, 0.21793659210205077, 0.21793660145702864, False]\n",
+      "['watts', None, 0.2093588829040527, 0.20935889188201626, False]\n",
+      "['severity', None, 0.0, 0.0, True]\n",
+      "['severity', None, 0.07923243045806888, 0.07923242819331439, False]\n",
+      "['severity', None, 0.1854572105407715, 0.18545721572250734, False]\n",
+      "['severity', None, 0.0, 0.0, True]\n",
+      "['severity', None, 0.0728005313873291, 0.0728005330987302, False]\n",
+      "['severity', None, 0.07512673377990722, 0.07512673435993421, False]\n",
+      "['fgt', 1.5, 0.0, 0.0, True]\n",
+      "['fgt', 1.5, 0.09604831695556641, 0.09604831443745937, False]\n",
+      "['fgt', 1.5, 0.2053561019897461, 0.20535609764864574, False]\n",
+      "['fgt', 1.5, 0.0, 0.0, True]\n",
+      "['fgt', 1.5, 0.08746409416198732, 0.08746409885992494, False]\n",
+      "['fgt', 1.5, 0.10156595230102539, 0.10156595590020855, False]\n",
+      "['cuh', 0.1, 0.0, 0.0, True]\n",
+      "['cuh', 0.1, 0.2097592353820801, 0.19102756696792866, False]\n",
+      "['cuh', 0.1, 0.5622922515869141, 0.4393843062584294, False]\n",
+      "['cuh', 0.1, 0.0, 0.0, True]\n",
+      "['cuh', 0.1, 0.19864923477172852, 0.18180029893092842, False]\n",
+      "['cuh', 0.1, 0.2005438995361328, 0.18338056083181475, False]\n",
+      "['cuh', 0.5, 0.0, 0.0, True]\n",
+      "['cuh', 0.5, 0.1591648197174072, 0.15283145592467262, False]\n",
+      "['cuh', 0.5, 0.34716400146484383, 0.3170332966255559, False]\n",
+      "['cuh', 0.5, 0.0, 0.0, True]\n",
+      "['cuh', 0.5, 0.1460800838470459, 0.1407452404840066, False]\n",
+      "['cuh', 0.5, 0.1705278587341309, 0.1632579128578896, False]\n",
+      "['sen', None, 0.0, 0.0, True]\n",
+      "['sen', None, 0.1608910891089109, 0.16376237623762374, False]\n",
+      "['sen', None, 0.2890707704371692, 0.2912442160887388, False]\n",
+      "['sen', None, nan, 0.0, False]\n",
+      "['sen', None, 0.14450520550725568, 0.14438831281082998, False]\n",
+      "['sen', None, 0.1830057079874689, 0.21204379033354587, False]\n",
+      "['thon', None, 0.0, 0.0, True]\n",
+      "['thon', None, 0.2215469071659641, 0.22394863248701108, False]\n",
+      "['thon', None, 0.40304133726448504, 0.40765681743630156, False]\n",
+      "['thon', None, nan, 0.0, False]\n",
+      "['thon', None, 0.20220656982739763, 0.20437707547595388, False]\n",
+      "['thon', None, 0.24917642912377377, 0.25199096284148526, False]\n",
+      "['takayama', None, 0.0, -0.020000000000000018, False]\n",
+      "['takayama', None, 0.1152394366197184, 0.09523943661971823, False]\n",
+      "['takayama', None, 0.22382983346327381, 0.20382983346327377, False]\n",
+      "['takayama', None, nan, 0, False]\n",
+      "['takayama', None, 0.10503493687525481, 0.08503492770203225, False]\n",
+      "['takayama', None, 0.12602590805665248, 0.10602587682835163, False]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Programas\\lib\\site-packages\\ipykernel_launcher.py:40: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# poverty\n",
+    "# Stata no normaliza por poblacion\n",
+    "\n",
+    "for j in range(1,11):\n",
+    "    alpha = None\n",
+    "    if j==1:\n",
+    "        method = 'headcount'\n",
+    "        valR = dfR.headcount\n",
+    "    elif j==2:\n",
+    "        method = 'gap'\n",
+    "        valR = dfR.gap\n",
+    "    elif j==3:\n",
+    "        method = 'watts'\n",
+    "        valR = dfR.watts\n",
+    "    elif j==4:\n",
+    "        method = 'severity'\n",
+    "        valR = dfR.fgt2\n",
+    "    elif j==5:\n",
+    "        method = 'fgt'\n",
+    "        valR = dfR.fgt15\n",
+    "        alpha = 1.5    \n",
+    "    elif j==6:\n",
+    "        method = 'cuh'\n",
+    "        valR = dfR.cuh01\n",
+    "        alpha = 0.1    \n",
+    "    elif j==7:\n",
+    "        method = 'cuh'\n",
+    "        valR = dfR.cuh05\n",
+    "        alpha = 0.5    \n",
+    "    elif j==8:\n",
+    "        method = 'sen'\n",
+    "        valR = dfR.sen\n",
+    "    elif j==9:\n",
+    "        method = 'thon'\n",
+    "        valR = dfR.thon      \n",
+    "    elif j==10:\n",
+    "        method = 'takayama'\n",
+    "        valR = dfR.takayama\n",
+    "\n",
+    "    valR[valR==-1] = np.NaN    \n",
+    "    valR = valR/n # Stata no normaliza por poblacion    \n",
+    "    for i in range(1,nf+1):\n",
+    "        x = make_data(n,i) \n",
+    "        df = pd.DataFrame({'x':x}) #+0.0  # si es entero tira error\n",
+    "        pline = np.median(x)/2\n",
+    "        dr = ApodeData(df, varx=\"x\")\n",
+    "        if alpha==None:\n",
+    "            g = dr.poverty(method,pline=pline)\n",
+    "        else:\n",
+    "            g = dr.poverty(method,alpha=alpha,pline=pline)\n",
     "        print([method,alpha,valR[i-1], g, isclose(valR[i-1],g)])"
    ]
   }
